--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Roberto\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+file.reference.gson-2.8.5.jar=C:\\Users\\Alumnat\\Documents\\NetBeansProjects\\OpusList\\gson-2.8.8.jar
+user.properties.file=C:\\Users\\Alumnat\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
