--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.gson-2.8.5.jar=C:\\Users\\Alumnat\\Documents\\NetBeansProjects\\OpusList\\gson-2.8.8.jar
-user.properties.file=C:\\Users\\Alumnat\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+file.reference.gson-2.8.5.jar=C:\\Users\\Alumne\\Downloads\\jar_files (1)\\gson-2.8.5.jar
+user.properties.file=C:\\Users\\Alumne\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
