--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/OpusList
 excludes=
 file.reference.gson-2.8.5.jar=gson-2.8.5.jar
+file.reference.gson-2.8.5.jar-1=C:\\Users\\Alumne\\Downloads\\jar_files (1)\\gson-2.8.5.jar
 file.reference.gson-2.8.8.jar=gson-2.8.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.5.jar}:\
-    ${file.reference.gson-2.8.8.jar}
+    ${file.reference.gson-2.8.8.jar}:\
+    ${file.reference.gson-2.8.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
